--- a/index.html
+++ b/index.html
@@ -1,227 +1,434 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>NovaShop</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>NovaShop</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    /* RESET */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Segoe UI", sans-serif;
-    }
+<style>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Segoe UI", sans-serif;
+}
 
-    body {
-      background: #0f1220;
-      color: #fff;
-      overflow-x: hidden;
-    }
+body {
+  background: #0f1220;
+  color: white;
+}
 
-    /* ---------- LOADER ---------- */
-    #loader {
-      position: fixed;
-      inset: 0;
-      background: #0f1220;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-      transition: opacity 1s ease;
-    }
+/* LOADER */
+#loader {
+  position: fixed;
+  inset: 0;
+  background: #0f1220;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  transition: opacity 1s;
+}
+.spinner {
+  width: 70px;
+  height: 70px;
+  border: 6px solid #2a2f55;
+  border-top: 6px solid #6c7cff;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+@keyframes spin { to { transform: rotate(360deg); } }
 
-    .spinner {
-      width: 70px;
-      height: 70px;
-      border: 6px solid #2a2f55;
-      border-top: 6px solid #6c7cff;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-    }
+/* HEADER */
+header {
+  padding: 25px;
+  background: linear-gradient(135deg, #6c7cff, #8f6bff);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header h1 { font-size: 2.3rem; }
 
-    @keyframes spin {
-      to { transform: rotate(360deg); }
-    }
+.cart-icon {
+  font-size: 1.8rem;
+  cursor: pointer;
+  position: relative;
+}
+.cart-count {
+  position: absolute;
+  top: -8px;
+  right: -10px;
+  background: red;
+  border-radius: 50%;
+  padding: 2px 7px;
+  font-size: 0.75rem;
+}
 
-    /* ---------- MAIN CONTENT ---------- */
-    #content {
-      opacity: 0;
-      animation: fadeIn 1s ease forwards;
-      animation-delay: 1s;
-    }
+/* SEARCH */
+.search-box {
+  max-width: 400px;
+  margin: 25px auto;
+}
+.search-box input {
+  width: 100%;
+  padding: 12px;
+  border-radius: 20px;
+  border: none;
+}
 
-    @keyframes fadeIn {
-      to { opacity: 1; }
-    }
+/* STORE */
+.store {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 25px;
+  padding: 40px;
+  max-width: 1200px;
+  margin: auto;
+}
+.item {
+  background: #1b1f3b;
+  padding: 20px;
+  border-radius: 15px;
+}
+.item h3 { margin-bottom: 6px; }
+.price { color: #6c7cff; font-weight: bold; }
 
-    header {
-      padding: 30px;
-      text-align: center;
-      background: linear-gradient(135deg, #6c7cff, #8f6bff);
-      animation: slideDown 1s ease;
-    }
+.item button {
+  width: 100%;
+  padding: 10px;
+  border-radius: 20px;
+  border: none;
+  background: #6c7cff;
+  color: white;
+  cursor: pointer;
+  margin-top: 10px;
+  transition: opacity 0.4s, transform 0.4s;
+}
+.item button.secondary {
+  background: #2a2f55;
+}
+.item button.added {
+  opacity: 0.6;
+  transform: scale(1.05);
+}
 
-    @keyframes slideDown {
-      from { transform: translateY(-40px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
+/* PRODUCT PAGE */
+.page {
+  position: fixed;
+  inset: 0;
+  background: #0f1220;
+  z-index: 1000;
+  display: none;
+  padding: 25px;
+}
 
-    header h1 {
-      font-size: 3rem;
-      margin-bottom: 10px;
-    }
+.back {
+  cursor: pointer;
+  font-size: 1rem;
+  opacity: 0.8;
+  margin-bottom: 10px;
+}
+.back:hover { opacity: 1; }
 
-    header p {
-      opacity: 0.85;
-    }
+.page-content {
+  max-width: 700px;
+  margin: auto;
+}
 
-    /* SEARCH */
-    .search-box {
-      margin: 30px auto;
-      max-width: 400px;
-      text-align: center;
-    }
+/* GALLERY */
+.gallery img {
+  width: 100%;
+  border-radius: 15px;
+}
 
-    .search-box input {
-      width: 100%;
-      padding: 12px 16px;
-      border-radius: 25px;
-      border: none;
-      outline: none;
-      font-size: 1rem;
-    }
+.gallery-controls {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+.gallery-controls button {
+  background: #2a2f55;
+  border: none;
+  color: white;
+  padding: 8px 14px;
+  border-radius: 20px;
+  cursor: pointer;
+}
 
-    /* ITEMS GRID */
-    .store {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 25px;
-      padding: 40px;
-      max-width: 1200px;
-      margin: auto;
-    }
+/* DOTS */
+.dots {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-top: 12px;
+}
+.dot {
+  width: 8px;
+  height: 8px;
+  background: #555;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: transform 0.3s, background 0.3s;
+}
+.dot.active {
+  background: #6c7cff;
+  transform: scale(1.6);
+}
 
-    .item {
-      background: #1b1f3b;
-      border-radius: 16px;
-      padding: 20px;
-      text-align: center;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      animation: popIn 0.6s ease forwards;
-    }
+/* PRODUCT BUTTON */
+.page button.main {
+  margin-top: 15px;
+  width: 100%;
+  padding: 12px;
+  border-radius: 25px;
+  border: none;
+  background: #6c7cff;
+  color: white;
+  cursor: pointer;
+  transition: opacity 0.4s, transform 0.4s;
+}
+.page button.main.added {
+  opacity: 0.6;
+  transform: scale(1.05);
+}
 
-    @keyframes popIn {
-      from { transform: scale(0.9); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
-    }
+/* CART */
+.cart {
+  position: fixed;
+  right: -350px;
+  top: 0;
+  width: 300px;
+  height: 100%;
+  background: #1b1f3b;
+  padding: 20px;
+  transition: right 0.4s;
+  z-index: 999;
+}
+.cart.open { right: 0; }
 
-    .item:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 20px 40px rgba(0,0,0,0.4);
-    }
+.cart-item {
+  font-size: 0.9rem;
+  margin-bottom: 8px;
+}
+.total {
+  margin-top: 10px;
+  font-weight: bold;
+}
 
-    .item h3 {
-      margin-bottom: 8px;
-    }
+.cart button.checkout {
+  width: 100%;
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 20px;
+  border: none;
+  background: #6c7cff;
+  color: white;
+  cursor: pointer;
+}
 
-    .price {
-      color: #6c7cff;
-      font-weight: bold;
-      margin-bottom: 15px;
-    }
-
-    .item button {
-      padding: 10px 16px;
-      border-radius: 20px;
-      border: none;
-      background: #6c7cff;
-      color: white;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    .item button:hover {
-      background: #8f6bff;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      opacity: 0.5;
-    }
-  </style>
+footer {
+  text-align: center;
+  padding: 20px;
+  opacity: 0.5;
+}
+</style>
 </head>
 <body>
 
-  <!-- LOADING SCREEN -->
-  <div id="loader">
-    <div class="spinner"></div>
+<div id="loader"><div class="spinner"></div></div>
+
+<header>
+  <h1>NovaShop</h1>
+  <div class="cart-icon" onclick="toggleCart()">🛒
+    <span class="cart-count" id="cartCount">0</span>
   </div>
+</header>
 
-  <!-- MAIN SITE -->
-  <div id="content">
-    <header>
-      <h1>NovaShop</h1>
-      <p>Clean. Fast. Modern.</p>
-    </header>
+<div class="search-box">
+  <input id="search" placeholder="Search products...">
+</div>
 
-    <div class="search-box">
-      <input type="text" id="search" placeholder="Search items...">
+<div class="store" id="store"></div>
+
+<footer>© 2025 NovaShop</footer>
+
+<!-- PRODUCT PAGE -->
+<div class="page" id="productPage">
+  <div class="back" onclick="closePage()">← Back</div>
+
+  <div class="page-content">
+    <div class="gallery">
+      <img id="galleryImage">
+      <div class="gallery-controls">
+        <button onclick="prevImage()">◀</button>
+        <button onclick="nextImage()">▶</button>
+      </div>
+      <div class="dots" id="dots"></div>
     </div>
 
-    <div class="store" id="store">
-      <div class="item">
-        <h3>Cosmic Hoodie</h3>
-        <div class="price">$49.99</div>
-        <button>Add to Cart</button>
-      </div>
-
-      <div class="item">
-        <h3>Neon Sneakers</h3>
-        <div class="price">$89.99</div>
-        <button>Add to Cart</button>
-      </div>
-
-      <div class="item">
-        <h3>Galaxy Backpack</h3>
-        <div class="price">$39.99</div>
-        <button>Add to Cart</button>
-      </div>
-
-      <div class="item">
-        <h3>Starlight Cap</h3>
-        <div class="price">$24.99</div>
-        <button>Add to Cart</button>
-      </div>
-    </div>
-
-    <footer>
-      © 2025 NovaShop
-    </footer>
+    <h2 id="pageTitle"></h2>
+    <p id="pageDesc"></p>
+    <p class="price" id="pagePrice"></p>
+    <button class="main" id="pageAddBtn" onclick="addToCart(this)">
+      Add to Cart
+    </button>
   </div>
+</div>
 
-  <script>
-    // LOADER FADE OUT
-    window.addEventListener("load", () => {
-      const loader = document.getElementById("loader");
-      loader.style.opacity = "0";
-      setTimeout(() => loader.style.display = "none", 1000);
-    });
+<!-- CART -->
+<div class="cart" id="cart">
+  <div class="back" onclick="toggleCart()">← Back</div>
+  <h2>Your Cart</h2>
+  <div id="cartItems"></div>
+  <div class="total" id="cartTotal"></div>
+  <button class="checkout" onclick="checkout()">Checkout</button>
+</div>
 
-    // SEARCH FUNCTION
-    const searchInput = document.getElementById("search");
-    const items = document.querySelectorAll(".item");
+<script>
+window.onload = () => {
+  loader.style.opacity = "0";
+  setTimeout(() => loader.style.display = "none", 1000);
+};
 
-    searchInput.addEventListener("keyup", () => {
-      const value = searchInput.value.toLowerCase();
-      items.forEach(item => {
-        const text = item.innerText.toLowerCase();
-        item.style.display = text.includes(value) ? "block" : "none";
-      });
-    });
-  </script>
+const products = [
+  {
+    name: "Cosmic Hoodie",
+    price: 49.99,
+    desc: "Ultra-soft hoodie with a cosmic theme.",
+    images: [
+      "https://picsum.photos/600/400?random=1",
+      "https://picsum.photos/600/400?random=2"
+    ]
+  },
+  {
+    name: "Neon Sneakers",
+    price: 89.99,
+    desc: "Lightweight sneakers with neon accents.",
+    images: [
+      "https://picsum.photos/600/400?random=3",
+      "https://picsum.photos/600/400?random=4",
+      "https://picsum.photos/600/400?random=5"
+    ]
+  }
+];
+
+let cart = [];
+let currentProduct = null;
+let imageIndex = 0;
+
+products.forEach(p => {
+  const div = document.createElement("div");
+  div.className = "item";
+  div.innerHTML = `
+    <h3>${p.name}</h3>
+    <div class="price">$${p.price}</div>
+    <button class="secondary" onclick='openPage(${JSON.stringify(p)})'>
+      View Item
+    </button>
+    <button onclick='quickAdd(this, ${JSON.stringify(p)})'>
+      Add to Cart
+    </button>
+  `;
+  store.appendChild(div);
+});
+
+function buildDots() {
+  dots.innerHTML = "";
+  currentProduct.images.forEach((_, i) => {
+    const d = document.createElement("div");
+    d.className = "dot" + (i === imageIndex ? " active" : "");
+    d.onclick = () => {
+      imageIndex = i;
+      updateImage();
+    };
+    dots.appendChild(d);
+  });
+}
+
+function updateImage() {
+  galleryImage.src = currentProduct.images[imageIndex];
+  buildDots();
+}
+
+function openPage(product) {
+  currentProduct = product;
+  imageIndex = 0;
+  productPage.style.display = "block";
+  pageTitle.textContent = product.name;
+  pageDesc.textContent = product.desc;
+  pagePrice.textContent = "$" + product.price;
+  updateImage();
+}
+
+function closePage() {
+  productPage.style.display = "none";
+}
+
+function nextImage() {
+  imageIndex = (imageIndex + 1) % currentProduct.images.length;
+  updateImage();
+}
+
+function prevImage() {
+  imageIndex =
+    (imageIndex - 1 + currentProduct.images.length) %
+    currentProduct.images.length;
+  updateImage();
+}
+
+function animateAdd(btn) {
+  const original = btn.textContent;
+  btn.textContent = "Added to cart ✓";
+  btn.classList.add("added");
+  setTimeout(() => {
+    btn.textContent = original;
+    btn.classList.remove("added");
+  }, 3000);
+}
+
+function addToCart(btn) {
+  cart.push(currentProduct);
+  updateCart();
+  animateAdd(btn);
+}
+
+function quickAdd(btn, product) {
+  cart.push(product);
+  updateCart();
+  animateAdd(btn);
+}
+
+function toggleCart() {
+  cartDiv.classList.toggle("open");
+}
+
+function updateCart() {
+  cartItems.innerHTML = "";
+  let total = 0;
+  cart.forEach(i => {
+    total += i.price;
+    cartItems.innerHTML += `<div class="cart-item">${i.name} - $${i.price}</div>`;
+  });
+  cartTotal.textContent = "Total: $" + total.toFixed(2);
+  cartCount.textContent = cart.length;
+}
+
+function checkout() {
+  alert("Checkout complete (demo)");
+  cart = [];
+  updateCart();
+  toggleCart();
+}
+
+search.addEventListener("keyup", () => {
+  const v = search.value.toLowerCase();
+  document.querySelectorAll(".item").forEach(i => {
+    i.style.display = i.innerText.toLowerCase().includes(v) ? "block" : "none";
+  });
+});
+
+const cartDiv = document.getElementById("cart");
+</script>
 
 </body>
 </html>
