--- a/index.html
+++ b/index.html
@@ -6,231 +6,81 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Segoe UI", sans-serif;
-}
-
-body {
-  background: #0f1220;
-  color: white;
-}
+* { margin: 0; padding: 0; box-sizing: border-box; font-family: "Segoe UI", sans-serif; }
+body { background: #0f1220; color: white; transition: filter 0.3s; }
 
 /* LOADER */
 #loader {
-  position: fixed;
-  inset: 0;
-  background: #0f1220;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
+  position: fixed; inset: 0; background: #0f1220;
+  display: flex; justify-content: center; align-items: center; z-index: 9999;
   transition: opacity 1s;
 }
-.spinner {
-  width: 70px;
-  height: 70px;
-  border: 6px solid #2a2f55;
-  border-top: 6px solid #6c7cff;
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
-}
+.spinner { width: 70px; height: 70px; border: 6px solid #2a2f55; border-top: 6px solid #6c7cff; border-radius: 50%; animation: spin 1s linear infinite; }
 @keyframes spin { to { transform: rotate(360deg); } }
 
 /* HEADER */
-header {
-  padding: 25px;
-  background: linear-gradient(135deg, #6c7cff, #8f6bff);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+header { padding: 25px; background: linear-gradient(135deg, #6c7cff, #8f6bff); display: flex; justify-content: space-between; align-items: center; }
 header h1 { font-size: 2.3rem; }
-
-.cart-icon {
-  font-size: 1.8rem;
-  cursor: pointer;
-  position: relative;
-}
-.cart-count {
-  position: absolute;
-  top: -8px;
-  right: -10px;
-  background: red;
-  border-radius: 50%;
-  padding: 2px 7px;
-  font-size: 0.75rem;
-}
+.cart-icon { font-size: 1.8rem; cursor: pointer; position: relative; }
+.cart-count { position: absolute; top: -8px; right: -10px; background: red; border-radius: 50%; padding: 2px 7px; font-size: 0.75rem; }
 
 /* SEARCH */
-.search-box {
-  max-width: 400px;
-  margin: 25px auto;
-}
-.search-box input {
-  width: 100%;
-  padding: 12px;
-  border-radius: 20px;
-  border: none;
-}
+.search-box { max-width: 400px; margin: 25px auto; }
+.search-box input { width: 100%; padding: 12px; border-radius: 20px; border: none; }
 
 /* STORE */
-.store {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 25px;
-  padding: 40px;
-  max-width: 1200px;
-  margin: auto;
-}
-.item {
-  background: #1b1f3b;
-  padding: 20px;
-  border-radius: 15px;
-}
+.store { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 25px; padding: 40px; max-width: 1200px; margin: auto; }
+.item { background: #1b1f3b; padding: 20px; border-radius: 15px; }
 .item h3 { margin-bottom: 6px; }
 .price { color: #6c7cff; font-weight: bold; }
-
-.item button {
-  width: 100%;
-  padding: 10px;
-  border-radius: 20px;
-  border: none;
-  background: #6c7cff;
-  color: white;
-  cursor: pointer;
-  margin-top: 10px;
-  transition: opacity 0.4s, transform 0.4s;
-}
-.item button.secondary {
-  background: #2a2f55;
-}
-.item button.added {
-  opacity: 0.6;
-  transform: scale(1.05);
-}
+.item button { width: 100%; padding: 10px; border-radius: 20px; border: none; background: #6c7cff; color: white; cursor: pointer; margin-top: 10px; transition: opacity 0.4s, transform 0.4s; }
+.item button.secondary { background: #2a2f55; }
+.item button.added { opacity: 0.6; transform: scale(1.05); }
 
 /* PRODUCT PAGE */
-.page {
-  position: fixed;
-  inset: 0;
-  background: #0f1220;
-  z-index: 1000;
-  display: none;
-  padding: 25px;
-}
-
-.back {
-  cursor: pointer;
-  font-size: 1rem;
-  opacity: 0.8;
-  margin-bottom: 10px;
-}
+.page { position: fixed; inset: 0; background: #0f1220; z-index: 1000; display: none; padding: 25px; }
+.back { cursor: pointer; font-size: 1rem; opacity: 0.8; margin-bottom: 10px; }
 .back:hover { opacity: 1; }
-
-.page-content {
-  max-width: 700px;
-  margin: auto;
-}
+.page-content { max-width: 700px; margin: auto; }
 
 /* GALLERY */
-.gallery img {
-  width: 100%;
-  border-radius: 15px;
-}
-
-.gallery-controls {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
-}
-.gallery-controls button {
-  background: #2a2f55;
-  border: none;
-  color: white;
-  padding: 8px 14px;
-  border-radius: 20px;
-  cursor: pointer;
-}
+.gallery img { width: 100%; border-radius: 15px; }
+.gallery-controls { display: flex; justify-content: space-between; margin-top: 10px; }
+.gallery-controls button { background: #2a2f55; border: none; color: white; padding: 8px 14px; border-radius: 20px; cursor: pointer; }
 
 /* DOTS */
-.dots {
-  display: flex;
-  justify-content: center;
-  gap: 8px;
-  margin-top: 12px;
-}
-.dot {
-  width: 8px;
-  height: 8px;
-  background: #555;
-  border-radius: 50%;
-  cursor: pointer;
-  transition: transform 0.3s, background 0.3s;
-}
-.dot.active {
-  background: #6c7cff;
-  transform: scale(1.6);
-}
+.dots { display: flex; justify-content: center; gap: 8px; margin-top: 12px; }
+.dot { width: 8px; height: 8px; background: #555; border-radius: 50%; cursor: pointer; transition: transform 0.3s, background 0.3s; }
+.dot.active { background: #6c7cff; transform: scale(1.6); }
 
 /* PRODUCT BUTTON */
-.page button.main {
-  margin-top: 15px;
-  width: 100%;
-  padding: 12px;
-  border-radius: 25px;
-  border: none;
-  background: #6c7cff;
-  color: white;
-  cursor: pointer;
-  transition: opacity 0.4s, transform 0.4s;
-}
-.page button.main.added {
-  opacity: 0.6;
-  transform: scale(1.05);
-}
+.page button.main { margin-top: 15px; width: 100%; padding: 12px; border-radius: 25px; border: none; background: #6c7cff; color: white; cursor: pointer; transition: opacity 0.4s, transform 0.4s; }
+.page button.main.added { opacity: 0.6; transform: scale(1.05); }
 
 /* CART */
-.cart {
-  position: fixed;
-  right: -350px;
-  top: 0;
-  width: 300px;
-  height: 100%;
-  background: #1b1f3b;
-  padding: 20px;
-  transition: right 0.4s;
-  z-index: 999;
-}
+.cart { position: fixed; right: -350px; top: 0; width: 300px; height: 100%; background: #1b1f3b; padding: 20px; transition: right 0.4s; z-index: 999; }
 .cart.open { right: 0; }
+.cart-item { font-size: 0.9rem; margin-bottom: 8px; }
+.total { margin-top: 10px; font-weight: bold; }
+.cart button.checkout { width: 100%; margin-top: 10px; padding: 10px; border-radius: 20px; border: none; background: #6c7cff; color: white; cursor: pointer; }
 
-.cart-item {
-  font-size: 0.9rem;
-  margin-bottom: 8px;
+/* CHECKOUT POPUP */
+#checkoutOverlay {
+  display: none;
+  position: fixed; inset: 0;
+  background: rgba(0,0,0,0.5);
+  backdrop-filter: blur(5px);
+  z-index: 1999;
 }
-.total {
-  margin-top: 10px;
-  font-weight: bold;
+#checkoutPopup {
+  display: none;
+  position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);
+  background: #1b1f3b; color: white; padding: 20px; border-radius: 15px;
+  width: 90%; max-width: 400px; z-index: 2000;
 }
+#checkoutPopup input { width: 100%; padding: 10px; margin-top: 10px; text-align: center; font-weight: bold; border-radius: 10px; border: none; margin-bottom: 10px; }
 
-.cart button.checkout {
-  width: 100%;
-  margin-top: 10px;
-  padding: 10px;
-  border-radius: 20px;
-  border: none;
-  background: #6c7cff;
-  color: white;
-  cursor: pointer;
-}
-
-footer {
-  text-align: center;
-  padding: 20px;
-  opacity: 0.5;
-}
+footer { text-align: center; padding: 20px; opacity: 0.5; }
 </style>
 </head>
 <body>
@@ -255,7 +105,6 @@ footer {
 <!-- PRODUCT PAGE -->
 <div class="page" id="productPage">
   <div class="back" onclick="closePage()">← Back</div>
-
   <div class="page-content">
     <div class="gallery">
       <img id="galleryImage">
@@ -265,13 +114,10 @@ footer {
       </div>
       <div class="dots" id="dots"></div>
     </div>
-
     <h2 id="pageTitle"></h2>
     <p id="pageDesc"></p>
     <p class="price" id="pagePrice"></p>
-    <button class="main" id="pageAddBtn" onclick="addToCart(this)">
-      Add to Cart
-    </button>
+    <button class="main" id="pageAddBtn" onclick="addToCart(this)">Add to Cart</button>
   </div>
 </div>
 
@@ -284,6 +130,15 @@ footer {
   <button class="checkout" onclick="checkout()">Checkout</button>
 </div>
 
+<!-- CHECKOUT POPUP -->
+<div id="checkoutOverlay"></div>
+<div id="checkoutPopup">
+  <div class="back" id="closeCheckout">← Close</div>
+  <p>You have been redirected, message the owner with a screenshot of this code to purchase:</p>
+  <input type="text" id="checkoutCode" readonly>
+  <button class="main" id="copyCheckout">Copy Code</button>
+</div>
+
 <script>
 window.onload = () => {
   loader.style.opacity = "0";
@@ -291,30 +146,21 @@ window.onload = () => {
 };
 
 const products = [
-  {
-    name: "Cosmic Hoodie",
-    price: 49.99,
-    desc: "Ultra-soft hoodie with a cosmic theme.",
-    images: [
-      "https://picsum.photos/600/400?random=1",
-      "https://picsum.photos/600/400?random=2"
-    ]
-  },
-  {
-    name: "Neon Sneakers",
-    price: 89.99,
-    desc: "Lightweight sneakers with neon accents.",
-    images: [
-      "https://picsum.photos/600/400?random=3",
-      "https://picsum.photos/600/400?random=4",
-      "https://picsum.photos/600/400?random=5"
-    ]
-  }
+  { name: "Cosmic Hoodie", price: 49.99, desc: "Ultra-soft hoodie with a cosmic theme.", images: ["https://picsum.photos/600/400?random=1","https://picsum.photos/600/400?random=2"] },
+  { name: "Neon Sneakers", price: 89.99, desc: "Lightweight sneakers with neon accents.", images: ["https://picsum.photos/600/400?random=3","https://picsum.photos/600/400?random=4","https://picsum.photos/600/400?random=5"] }
 ];
 
 let cart = [];
 let currentProduct = null;
 let imageIndex = 0;
+
+const storeDiv = document.getElementById("store");
+const cartDiv = document.getElementById("cart");
+const cartItemsDiv = document.getElementById("cartItems");
+const cartTotalDiv = document.getElementById("cartTotal");
+const cartCountSpan = document.getElementById("cartCount");
+const checkoutOverlay = document.getElementById("checkoutOverlay");
+const checkoutPopup = document.getElementById("checkoutPopup");
 
 products.forEach(p => {
   const div = document.createElement("div");
@@ -322,14 +168,10 @@ products.forEach(p => {
   div.innerHTML = `
     <h3>${p.name}</h3>
     <div class="price">$${p.price}</div>
-    <button class="secondary" onclick='openPage(${JSON.stringify(p)})'>
-      View Item
-    </button>
-    <button onclick='quickAdd(this, ${JSON.stringify(p)})'>
-      Add to Cart
-    </button>
+    <button class="secondary" onclick='openPage(${JSON.stringify(p)})'>View Item</button>
+    <button onclick='quickAdd(this, ${JSON.stringify(p)})'>Add to Cart</button>
   `;
-  store.appendChild(div);
+  storeDiv.appendChild(div);
 });
 
 function buildDots() {
@@ -337,10 +179,7 @@ function buildDots() {
   currentProduct.images.forEach((_, i) => {
     const d = document.createElement("div");
     d.className = "dot" + (i === imageIndex ? " active" : "");
-    d.onclick = () => {
-      imageIndex = i;
-      updateImage();
-    };
+    d.onclick = () => { imageIndex = i; updateImage(); };
     dots.appendChild(d);
   });
 }
@@ -360,75 +199,61 @@ function openPage(product) {
   updateImage();
 }
 
-function closePage() {
-  productPage.style.display = "none";
-}
+function closePage() { productPage.style.display = "none"; }
 
-function nextImage() {
-  imageIndex = (imageIndex + 1) % currentProduct.images.length;
-  updateImage();
-}
-
-function prevImage() {
-  imageIndex =
-    (imageIndex - 1 + currentProduct.images.length) %
-    currentProduct.images.length;
-  updateImage();
-}
+function nextImage() { imageIndex = (imageIndex + 1) % currentProduct.images.length; updateImage(); }
+function prevImage() { imageIndex = (imageIndex - 1 + currentProduct.images.length) % currentProduct.images.length; updateImage(); }
 
 function animateAdd(btn) {
   const original = btn.textContent;
   btn.textContent = "Added to cart ✓";
   btn.classList.add("added");
-  setTimeout(() => {
-    btn.textContent = original;
-    btn.classList.remove("added");
-  }, 3000);
+  setTimeout(() => { btn.textContent = original; btn.classList.remove("added"); }, 3000);
 }
 
-function addToCart(btn) {
-  cart.push(currentProduct);
-  updateCart();
-  animateAdd(btn);
-}
+function addToCart(btn) { cart.push(currentProduct); updateCart(); animateAdd(btn); }
+function quickAdd(btn, product) { cart.push(product); updateCart(); animateAdd(btn); }
 
-function quickAdd(btn, product) {
-  cart.push(product);
-  updateCart();
-  animateAdd(btn);
-}
-
-function toggleCart() {
-  cartDiv.classList.toggle("open");
-}
+function toggleCart() { cartDiv.classList.toggle("open"); }
 
 function updateCart() {
-  cartItems.innerHTML = "";
+  cartItemsDiv.innerHTML = "";
   let total = 0;
-  cart.forEach(i => {
-    total += i.price;
-    cartItems.innerHTML += `<div class="cart-item">${i.name} - $${i.price}</div>`;
-  });
-  cartTotal.textContent = "Total: $" + total.toFixed(2);
-  cartCount.textContent = cart.length;
+  cart.forEach(i => { total += i.price; cartItemsDiv.innerHTML += `<div class="cart-item">${i.name} - $${i.price}</div>`; });
+  cartTotalDiv.textContent = "Total: $" + total.toFixed(2);
+  cartCountSpan.textContent = cart.length;
 }
 
+// CHECKOUT
 function checkout() {
-  alert("Checkout complete (demo)");
+  if(cart.length<1){ alert("Add at least one item to checkout!"); return; }
+  window.open("https://www.facebook.com/amanda.lester.39", "_blank");
+  setTimeout(showCheckoutPopup, 2000);
+}
+
+function showCheckoutPopup() {
+  const code = Array.from({length:11}, ()=>"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789".charAt(Math.floor(Math.random()*62))).join("");
+  document.getElementById("checkoutCode").value = code;
+  checkoutOverlay.style.display = "block";
+  checkoutPopup.style.display = "block";
+
+  console.log({time:new Date().toLocaleString(), orderId:code, items:cart.map(p=>p.name)});
   cart = [];
   updateCart();
   toggleCart();
 }
 
-search.addEventListener("keyup", () => {
+document.getElementById("closeCheckout").onclick = () => { checkoutOverlay.style.display = "none"; checkoutPopup.style.display = "none"; };
+document.getElementById("copyCheckout").onclick = () => { 
+  const input = document.getElementById("checkoutCode");
+  input.select(); input.setSelectionRange(0,99999); document.execCommand("copy"); alert("Code copied!"); 
+};
+
+// SEARCH
+document.getElementById("search").addEventListener("keyup", () => {
   const v = search.value.toLowerCase();
-  document.querySelectorAll(".item").forEach(i => {
-    i.style.display = i.innerText.toLowerCase().includes(v) ? "block" : "none";
-  });
+  document.querySelectorAll(".item").forEach(i => i.style.display = i.innerText.toLowerCase().includes(v) ? "block" : "none");
 });
-
-const cartDiv = document.getElementById("cart");
 </script>
-
 </body>
 </html>
