--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@ window.onload = () => {
 
 const products = [
   { name: "F.R.I.E.N.D.S Keychain", price: 3.99, desc: "F.R.I.E.N.D.S Keychain is a GREAT pick for superfans!", images: ["https://cdn.thingiverse.com/renders/0f/76/85/e0/6b/e9d323d32f1c2ff34302aaa6c82a4c9f_display_large.jpg","https://cdn.thingiverse.com/renders/10/fe/4a/33/7b/44f357e2061f8efda5c32bfcb0889571_display_large.jpg"] },
+   { name: "Can Opener + Bag Clip", price: 3.99, desc: "Super useful kitchen gadgets!", images: ["https://cdn.thingiverse.com/assets/30/4e/2b/1e/d9/large_display_under-tab.jpg","https://cdn.thingiverse.com/renders/35/35/a9/96/4e/9346eba6fd2d98a1e73acdd77b012af4_display_large.jpg"] },
   { name: "Racoon", price: 5.99, desc: "Cute little racoon, great gift for your kids! NOTE: It does NOT come colored.", images: ["https://cdn.thingiverse.com/assets/16/48/4c/b5/4d/large_display_20251110_083145.jpg","https://cdn.thingiverse.com/assets/75/f1/33/af/10/large_display_20251110_083201.jpg"] }
 ];
 
